--- a/my-typeorm/ormconfig.json
+++ b/my-typeorm/ormconfig.json
@@ -7,6 +7,7 @@
   "database": "social_network",
   "synchronize": true,
   "logging": false,
+  "dropSchema": true,
   "entities": ["src/entity/**/*.ts"],
   "migrations": ["src/migration/**/*.ts"],
   "subscribers": ["src/subscriber/**/*.ts"],
